  add_subdirectory(examples/configurable/)
  add_subdirectory(examples/multibus/)
  add_subdirectory(examples/PCIe/)
  add_subdirectory(examples/plb/)
  add_subdirectory(examples/ship/)
  add_subdirectory(examples/simple/)
  add_subdirectory(examples/simplebus/)
  add_subdirectory(examples/simplebusAPITest/)
  add_subdirectory(examples/speedtest/)
