add_subdirectory(examples/callback_example)
add_subdirectory(examples/callback_example_watcher)
add_subdirectory(examples/environment_var_example)
add_subdirectory(examples/extended_parameter_arrays)
add_subdirectory(examples/gav_StatCalc)


# unavailable examples
#add_subdirectory(examples/demonstration_platform)
#add_subdirectory(examples/gav_demonstration_platform)
