add_subdirectory(examples/callback_example)
add_subdirectory(examples/callback_example_watcher)
add_subdirectory(examples/environment_var_example)
add_subdirectory(examples/extended_parameter_arrays)
add_subdirectory(examples/gav_StatCalc)
add_subdirectory(examples/gclog_example)
add_subdirectory(examples/gcnf_private_params)
add_subdirectory(examples/lua_example)
add_subdirectory(examples/message_streamer_example)
add_subdirectory(examples/message_streamer_file_example)
add_subdirectory(examples/message_streamer_tests)
add_subdirectory(examples/messages_streamer_lua_file_example)
add_subdirectory(examples/new_service_example)
add_subdirectory(examples/parameter_arrays)
add_subdirectory(examples/scml_example)
add_subdirectory(examples/systemc_params)


# unavailable examples
#add_subdirectory(examples/demonstration_platform)
#add_subdirectory(examples/gav_demonstration_platform)
#add_subdirectory(examples/gav_simple)

