SET(EXECUTABLE greensignalsocket_simple)
add_executable(${EXECUTABLE} examples/simple/example.cpp)
target_link_libraries(${EXECUTABLE} ${SystemC_LIBRARIES} pthread)
add_dependencies(compile_test ${EXECUTABLE})
add_test(NAME COMPILATION:_${EXECUTABLE} COMMAND ${EXECUTABLE})

SET(EXECUTABLE greensignalsocket_invext)
add_executable(${EXECUTABLE} examples/invalidate_ext/example.cpp)
target_link_libraries(${EXECUTABLE} ${SystemC_LIBRARIES} pthread)
add_dependencies(compile_test ${EXECUTABLE})
add_test(NAME COMPILATION:_${EXECUTABLE} COMMAND ${EXECUTABLE})

SET(EXECUTABLE greensignalsocket_multi)
add_executable(${EXECUTABLE} examples/multi_example/multi_example.cpp)
target_link_libraries(${EXECUTABLE} ${SystemC_LIBRARIES} pthread)
add_dependencies(compile_test ${EXECUTABLE})
add_test(NAME COMPILATION:_${EXECUTABLE} COMMAND ${EXECUTABLE})
