add_subdirectory(reg_container)
add_subdirectory(simple)
add_subdirectory(regression_tests/access_not_ex_reg/)
add_subdirectory(regression_tests/callback_ordering/)
add_subdirectory(regression_tests/delayed_not_rules/)
add_subdirectory(regression_tests/drf_reg_creation_etc/)
add_subdirectory(regression_tests/reg_bits_cfg_file/)
add_subdirectory(regression_tests/register_event_switch/)
add_subdirectory(regression_tests/test_gcnf_drf/)
add_subdirectory(regression_tests/write_prot_warning/)
